// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serializeToRuntimeReadyProject > omits compiled projectConfig when no projectConfig blocks are present 1`] = `
{
  "codeBlocks": [],
  "compiledConfig": {
    "binaryAssets": [],
    "disableAutoCompilation": false,
    "memorySizeBytes": 1048576,
    "runtimeSettings": {
      "runtime": "WebWorkerLogicRuntime",
      "sampleRate": 50,
    },
  },
  "compiledModules": {},
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`serializeToRuntimeReadyProject > serializes runtime-ready project with compiled projectConfig 1`] = `
{
  "codeBlocks": [
    {
      "code": [
        "projectConfig",
        "memorySizeBytes 65536",
        "projectConfigEnd",
      ],
      "gridCoordinates": {
        "x": 0,
        "y": 0,
      },
    },
  ],
  "compiledConfig": {
    "binaryAssets": [],
    "disableAutoCompilation": false,
    "memorySizeBytes": 65536,
    "runtimeSettings": {
      "runtime": "WebWorkerLogicRuntime",
      "sampleRate": 50,
    },
  },
  "compiledModules": {
    "mod": {},
  },
  "viewport": {
    "gridCoordinates": {
      "x": 0,
      "y": 0,
    },
  },
}
`;
